// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonComponent testing should have the correct layout when loading 1`] = `
<SkeletonContent
  animationDirection="horizontalRight"
  animationType="none"
  boneColor="#E1E9EE"
  containerStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  duration={1200}
  easing={[Function]}
  highlightColor="#F2F8FC"
  intensity={0.6}
  isLoading={true}
  layout={
    Array [
      Object {
        "height": 100,
        "marginBottom": 10,
        "width": 240,
      },
      Object {
        "height": 40,
        "width": 180,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#E1E9EE",
            "borderRadius": 4,
            "height": 100,
            "marginBottom": 10,
            "overflow": "hidden",
            "width": 240,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#E1E9EE",
              "borderRadius": 4,
              "height": 100,
              "marginBottom": 10,
              "overflow": "hidden",
              "width": 240,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 100,
                "marginBottom": 10,
                "overflow": "hidden",
                "width": 240,
              }
            }
          />
        </View>
      </AnimatedComponent>
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#E1E9EE",
            "borderRadius": 4,
            "height": 40,
            "overflow": "hidden",
            "width": 180,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#E1E9EE",
              "borderRadius": 4,
              "height": 40,
              "overflow": "hidden",
              "width": 180,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 40,
                "overflow": "hidden",
                "width": 180,
              }
            }
          />
        </View>
      </AnimatedComponent>
    </View>
  </View>
</SkeletonContent>
`;

exports[`SkeletonComponent testing should render empty alone 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`SkeletonComponent testing should render the correct bones for children 1`] = `
<TestComponent
  animationType="none"
  isLoading={true}
>
  <SkeletonContent
    animationDirection="horizontalRight"
    animationType="none"
    boneColor="#E1E9EE"
    containerStyle={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    duration={1200}
    easing={[Function]}
    highlightColor="#F2F8FC"
    intensity={0.6}
    isLoading={true}
    layout={Array []}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <AnimatedComponent
          key=".0"
          style={
            Object {
              "backgroundColor": "#E1E9EE",
              "borderRadius": 4,
              "height": 100,
              "overflow": "hidden",
              "width": 200,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 100,
                "overflow": "hidden",
                "width": 200,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#E1E9EE",
                  "borderRadius": 4,
                  "height": 100,
                  "overflow": "hidden",
                  "width": 200,
                }
              }
            />
          </View>
        </AnimatedComponent>
        <AnimatedComponent
          key=".1"
          style={
            Object {
              "backgroundColor": "#E1E9EE",
              "borderRadius": 4,
              "height": 120,
              "overflow": "hidden",
              "width": 20,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "overflow": "hidden",
                "width": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#E1E9EE",
                  "borderRadius": 4,
                  "height": 120,
                  "overflow": "hidden",
                  "width": 20,
                }
              }
            />
          </View>
        </AnimatedComponent>
        <AnimatedComponent
          key=".2"
          style={
            Object {
              "backgroundColor": "#E1E9EE",
              "borderRadius": 4,
              "height": 80,
              "overflow": "hidden",
              "width": 240,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 80,
                "overflow": "hidden",
                "width": 240,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#E1E9EE",
                  "borderRadius": 4,
                  "height": 80,
                  "overflow": "hidden",
                  "width": 240,
                }
              }
            />
          </View>
        </AnimatedComponent>
      </View>
    </View>
  </SkeletonContent>
</TestComponent>
`;
